--- a/view/include/nav.html
+++ b/view/include/nav.html
@@ -73,7 +73,7 @@
 		<div class="des">
 			<div class="chuang">
 				<span class="yuan">创元智造</span>
-				<p class="yuan2">自|助|下|单|平|台</p>
+				<p class="yuan2">下|单|平|台</p>
 			</div>
 			
 		</div>
