--- a/view/login.html
+++ b/view/login.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
   <head>
     <meta charset="utf-8">
-    <title>创元智造</title>
+    <title>云智造</title>
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../css/sweetalert.css">
     <link rel="stylesheet" type="text/css" href="../css/login.css">
@@ -10,16 +10,12 @@
     <script type="text/javascript" src="../js/sweetalert.min.js"></script>
     <script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../js/tools.js"></script>
-
+    <script type="text/javascript" src="../js/base64js.min.js"></script>
   </head>
   <body>
     <div class="login">
     	<div class="logo">
     		<img src="../img/logo.png" style="height: 65px;">
-            <div class="chome_down">
-                <a download="" href="" class="down" id="down">下载Chome浏览器</a>
-            </div>
     	</div>
     	<div class="table">
     		<div class="table_describe">
