--- a/view/protocol.html
+++ b/view/protocol.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
   <head>
     <meta charset="utf-8">
-    <title>创元智造</title>
+    <title>云智造</title>
     <link rel="stylesheet" type="text/css" href="../css/protocol.css">
     <link rel="shortcut icon" href="cy.ico"/>
     <script type="text/javascript" src="../js/jquery.min.js"></script>
