--- a/view/weld_menu/home.html
+++ b/view/weld_menu/home.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
   <head>
     <meta charset="utf-8">
-    <title>创元智造</title>
+    <title>云智造</title>
     <link rel="stylesheet" type="text/css" href="../../css/home.css">
     <link rel="stylesheet" type="text/css" href="../../css/nav.css">
     <link rel="stylesheet" type="text/css" href="../../css/footer.css">
@@ -14,12 +14,173 @@
     <link rel="shortcut icon" href="../cy.ico"/>
   </head>
   <body ng-app="" style="margin: 0; padding: 0;">
-    <header class="header"  ng-include="'../include/top.html'"></header>
+    <header></header>
     <div class="dashboard-top-main">
-         <nav ng-include="'../include/nav.html'"></nav>
-         <footer ng-include="'sale.html'"></footer>
+         <nav></nav>
+         <footer>
+           <section class="col-lg-12 col-md-12 col-sm-12 col-xs-12 weld_product">
+           <div class="col-md-12 col-sm-12 col-xs-12 selcet_des">
+              <div class="col-md-2 col-sm-2 col-xs-2 repair_info">
+                <span>焊接返修产品</span>
+              </div>
+               <!--<div class="col-md-8" style="position: relative;">
+                <div class="repair_process">
+                  <span class="col-md-2" style="line-height: 60px;color: #2196f3;padding-left: 9%;">返修操作流程</span>
+                  <div class="col-md-10 repair_des">
+                    <div class="col-md-12 timeline_red"></div>
+                    <div class="col-md-12 red_detail">
+                      <div class="tow">
+                        <div class="round_red">
+                          <span>1</span>
+                        </div>
+                        <span class="one">等待销售审核</span>
+                      </div>
+                      <div class="tow">
+                        <div class="round_red">
+                          <span>2</span>
+                        </div>
+                        <span class="one">填写物流信息</span>
+                      </div>
+                      <div class="tow">
+                        <div class="round_red">
+                          <span>3</span>
+                        </div>
+                        <span class="one">等待创元收货</span>
+                      </div>
+                      <div class="tow">
+                        <div class="round_red">
+                          <span>4</span>
+                        </div>
+                        <span class="one">产品维修</span>
+                      </div>
+                      <div class="tow">
+                        <div class="round_red">
+                          <span>5</span>
+                        </div>
+                        <span class="one">验收产品</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>-->
+              <div style="float: right;width: 200px;">
+                <div class="repair_find">
+                  <input type="text" name="" class="con_on" id="contract_no" value="" placeholder="输入合同号!" style="width: 100px;">
+                  <div class="con_btn" style="width: 60px;height: 26px;text-align: center;line-height: 26px;background: #2c78b4; color: #fff;float: right;margin-left: 10px;border-radius: 14px;">搜索</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-12 col-sm-12 col-xs-12 repair_product_des">
+              <div class="des_product">
+                <div class="col-md-2 col-sm-2 col-xs-2 contract_no pad_one">合同编号</div>
+                <div class="col-md-2 col-sm-2 col-xs-2 contract_data pad_one">返修日期</div>
+                <div class="col-md-2 col-sm-2 col-xs-2 product_quantity pad_one">返修数量</div>
+                <div class="col-md-2 col-sm-2 col-xs-2 contract_state pad_one">订单状态</div>
+                <div class="col-md-2 col-sm-2 col-xs-2 logistics pad_one">物流信息</div>
+                <div class="col-md-2 col-sm-2 col-xs-2 selcet_pro pad_one">产品信息</div>
+              </div>
+              
+              <div class="page-data">
+                <div class="oem_contracts"></div>
+                     <div class="page-left"></div> 
+                  </div>
+            </div>
+          </section>
+
+          <!--填写物流信息-->
+          <div class="product_repair"></div>
+          <section class="logis_product">
+            <div class="col-md-12 col-sm-12 col-xs-12 repair_title">
+              <span style="font-size: 18px;color: #fff;margin-left: 20px;">填写物信息</span>
+              <div class="cental_pro_one">
+                <img src="../../img/canel.png" style="width: 100%;height: 100%;margin-top: 1px;">
+              </div>
+            </div>
+            <div class="col-md-12 col-sm-12 col-xs-12 logis_detail">
+              <div class="col-md-12 col-sm-12 col-xs-12 distribution">
+                <div class="col-md-2 col-sm-2 col-xs-2 ten">
+                  <span class="nine">配送方式</span>
+                </div>
+                <div  class="col-md-10 col-sm-10 col-xs-10 eight">
+                  <select class="sex" id="distribution">
+                    <option value="0"></option>
+                    <option value="甲方配送">甲方配送</option>
+                    <option value="快递配送">快递配送</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col-md-12 col-sm-12 col-xs-12 distribution">
+                <div class="col-md-2 col-sm-2 col-xs-2 ten">
+                  <span class="nine">选择快递</span>
+                </div>
+                <div  class="col-md-10 col-sm-10 col-xs-10 eight">
+                  <select class="sex" id="delivery">
+                    <option value="0"></option>
+                    <option value="甲方配送" class="sel_opt">甲方配送</option>
+                    <option value="圆通（快递）">圆通（快递）</option>
+                    <option value="跨越（物流）">跨越（物流）</option>
+                    <option value="顺丰（快递）">顺丰（快递）</option>
+                    <option value="德邦（物流）">德邦（物流）</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col-md-12 col-sm-12 col-xs-12 distribution">
+                <div class="col-md-2 col-sm-2 col-xs-2 ten">
+                  <span class="nine">物流订单</span>
+                </div>
+                <div  class="col-md-10 col-sm-10 col-xs-10 eight">
+                  <input type="text" class="con_on" id="con_on" value="" placeholder="请填写物流单号!" style="height: 39px;width: 90%;">
+                </div>
+              </div>
+            </div>
+            <div class="oem_repair_btn">
+              <img src="../../img/add.png">
+              <span>提交</span>
+            </div>
+          </section>
+
+          <!--产品信息-->
+          <section class="product_all">
+            <div class="col-md-12 col-sm-12 col-xs-12 repair_title">
+              <span style="font-size: 18px;color: #fff;margin-left: 20px;">返修产品信息</span>
+              <div class="cental_pro_one">
+                <img src="../../img/canel.png" style="width: 100%;height: 100%;margin-top: 1px;">
+              </div>
+            </div>
+            <div class="col-md-12 col-sm-12 col-xs-12 repair_product_des" style="margin-top: 20px;width: 96%;margin-left: 2%;">
+              <div class="des_product">
+                <div class="col-md-2 col-sm-2 col-xs-2 product_no">产品编号</div>
+                <div class="col-md-2 col-sm-2 col-xs-2 product_name">产品名称</div>
+                <div class="col-md-2 col-sm-2 col-xs-2 product_model">产品型号</div>
+                <div class="col-md-2 col-sm-2 col-xs-2 product_type">产品类型</div>
+                <div class="col-md-2 col-sm-2 col-xs-2 product_quantity">返修数量</div>
+                <div class="col-md-2 col-sm-2 col-xs-2 selcet_pro">查看质量问题</div>
+              </div>
+              <div class="product"><!--返修产品列表--></div>
+            </div>
+          </section>
+          <!--展示返修信息-->
+          <div class="question_product"></div>
+          <section class="product_question">
+            <div class="col-md-12 col-sm-12 col-xs-12 repair_title">
+              <span style="font-size: 18px;color: #fff;margin-left: 20px;">质量问题详情</span>
+              <div class="cental_pro">
+                <img src="../../img/canel.png" style="width: 100%;height: 100%;margin-top: 1px;">
+              </div>
+            </div>
+            <div class="col-md-12 col-sm-12 col-xs-12 question">
+              <div class="col-md-6 col-sm-12 col-xs-12 question_des">
+                <div class="des_ques">问题描述</div>
+                <textarea class="textare" id="textare_oem" value="" readonly="readonly" placeholder="请输入质量问题,问题**，用分号分开,字数小于1500!"></textarea>
+              </div>
+              <div class="col-md-6 col-sm-12 col-xs-12 question_img">
+                <div class="des_ques">产品图片</div>
+                <div class="imgs"><!--预览图片--><img src="" class="img" id="img_oem" style="width: 100%;height: 100%;"></div>
+              </div>
+            </div>
+          </section>
+      </footer>
     </div>
-     <script type="text/javascript" src="../../js/angular.min.js"></script>
     <script type="text/javascript" src="../../js/sweetalert.min.js"></script>
     <script type="text/javascript" src="../../js/jquery.min.js"></script>
     <script type="text/javascript" src="../../js/bootstrap.min.js"></script>
@@ -27,5 +188,10 @@
     <script type="text/javascript" src="../../js/route.js"></script>
     <script type="text/javascript" src="../../js/pager.js"></script>
     <script type="text/javascript" src="../../js/weld_menu.js"></script>
+    <script type="text/javascript" src="../../js/selltools.js"></script>
+     <script>
+      $("header").load("../include/top.html");
+      $("nav").load("../include/nav.html");
+    </script>
   </body>
 </html>
